Bug 127840 - date field changed to +/- 31
Summary: date field changed to +/- 31
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, regression
: 127641 (view as bug list)
Depends on:
Blocks: Fields
  Show dependency treegraph
 
Reported: 2019-09-28 09:52 UTC by cornosier
Modified: 2019-10-27 16:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cornosier 2019-09-28 09:52:54 UTC
- Ctrl + F2 to insert a field, Document tab

- Type = Date

- on the bottom left the offset is limited to ± 31

(automatic translation)
Comment 1 cornosier 2019-09-28 09:53:44 UTC
- Ctrl + F2 to insert a field, Document tab

- Type = Date

- on the bottom left the offset is limited to ± 31
(automatic translation)
Comment 2 Laurent Balland 2019-09-28 10:59:24 UTC
This limit is given by:

https://opengrok.libreoffice.org/xref/core/sw/source/ui/fldui/flddok.cxx?r=deb37c44#307

m_xDateOffsetED->set_range(-31, 31);    // one month

in LibO 6.3+

In 6.2 branch, equivalent code is:

m_pDateOffsetED->SetFirst(-31);    // one month
m_pDateOffsetED->SetLast(31);

modified by commit

https://cgit.freedesktop.org/libreoffice/core/commit/sw/source/ui/fldui/flddok.cxx?id=263684239168d88ae42637f72640048bd04e1aec

Actually in 6.2 branch, ±31 value is the limit of PageUp/Down keys. But user can enter higher values, with Up/Down keys or by direct editing.

In 6.3 branch, this value is now a blocking value.

There is the same effect with time: limit is 1 day, which is logical IMHO. On the opposite, for a date user may need to add an offset higher than 1 month (1 year for instance).
Comment 3 Laurent Balland 2019-09-29 06:45:48 UTC
Impacting commit is already identifed ==> remove bibisectRequest
Comment 4 Commit Notification 2019-09-30 18:43:35 UTC
Laurent BP committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eeac5b7a424c3a3be48b1c3583171ad97d1b19cd

tdf#127840 Remove limit to Days offset

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2019-09-30 18:45:15 UTC
Fixed in master, backport to 6-3 in gerrit
Comment 6 Commit Notification 2019-10-01 08:51:47 UTC
Laurent BP committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/2e8b54b172947c30df014fd7cbbfdc6c81f4b0f7

tdf#127840 Remove limit to Days offset

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-10-01 11:42:32 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 981654f6e0d57c2c6dd1bbf740a6b67941146497
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Laurent BP, thanks for fixing this issue!
Comment 8 Mike Kaganski 2019-10-27 16:43:17 UTC
*** Bug 127641 has been marked as a duplicate of this bug. ***