tdf#127840 Remove limit to Days offset

Since 6.3 branch, offset in days is rectricted to 1 month,
which could be too restricted.
In previous versions, this limit was not effective.

Change-Id: Iaddf6fe3ae5e8cd937127302917108d6f465ab81